Add Attraction done Edit Attraction(description and tags) now finished, missing edit City.